--- a/src/app/cursos/cursos.component.html
+++ b/src/app/cursos/cursos.component.html
@@ -1,3 +1,11 @@
-<p>cursos works!</p>
+<p>
+    Lista de cursos do portal {{ portalName }}
+</p>
+
+<ul>
+    <li *ngFor="let curso of cursos">
+        {{ curso }}
+    </li>
+</ul>
 
 <app-curso-detalhe></app-curso-detalhe>
