Aula 9: Interpolação e Property Binding

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,3 +5,6 @@ App works!
 <app-meu-primeiro2></app-meu-primeiro2>
 
 <app-cursos></app-cursos>
+
+<h2>Binding Playground</h2>
+<app-binding-playground></app-binding-playground>
