--- a/src/app/binding-playground/binding-playground/playground.component.html
+++ b/src/app/binding-playground/binding-playground/playground.component.html
@@ -13,4 +13,36 @@
         <img [src]="urlImagem">
         <img bind-src="urlImagem">
     </article>
+
+    <article>
+        <h3>Class e Style binding</h3>
+        <select #classe (change)="0">
+            <option value="alert-success">Sucesso</option>
+            <option value="alert-info">Info</option>
+            <option value="alert-warning">Alerta</option>
+            <option value="alert-danger">Erro</option>
+        </select>
+
+        <div class="alert {{classe.value}}" role="alert">
+            Este div ficará colorido de acordo com o valor do combo box.
+        </div>
+
+        <div class="alert" role="alert" [class.alert-success]="classe.value == 'alert-success'">
+            Sucesso
+        </div>
+        <div class="alert" role="alert" [class.alert-info]="classe.value == 'alert-info'">
+            Info
+        </div>
+        <div class="alert" role="alert" [class.alert-warning]="classe.value == 'alert-warning'">
+            Alerta
+        </div>
+        <div class="alert" role="alert" [class.alert-danger]="classe.value == 'alert-danger'">
+            Erro
+        </div>
+
+        <div class="alert alert-danger" role="alert" 
+            [style.display]="classe.value == 'alert-danger' ? 'block' : 'none'">
+            Esse bloco só aparece ao selecionar 'Erro' no combo box.
+        </div>
+    </article>
 </section>
